# mbot_natural_language_processing

./: .gitignore  README.md  repository.debs
mbot_nlu/: CMakeLists.txt  package.xml  setup.py
mbot_nlu/common/scripts/: interactive_nlu.py  time_divide_sentences.py
mbot_nlu/common/setup/: .gitignore  bazel_installation.sh  nlu_setup.sh  using_gpu_tips.txt
mbot_nlu/common/src/mbot_nlu/: README.md  mbot_nlu_common.py  phrases.py  simple_phrase_divider.py
mbot_nlu/common/test/: mbot_nlu_test.py  mbot_nlu_test.test  nlu_expected_output.txt  nlu_test_inputs.txt  run_tests.sh
mbot_nlu/ros/doc/: README.md
mbot_nlu/ros/launch/: mbot_nlu.launch
mbot_nlu/ros/msg/: ActionSlot.msg  ActionSlotArray.msg
mbot_nlu/ros/scripts/: mbot_nlu_node
mbot_nlu/ros/src/mbot_nlu_ros/: mbot_nlu_node.py
mbot_nlu/ros/test/: mbot_nlu_test.py  nlu_expected_output.txt  nlu_test_inputs.txt
mbot_nlu_classifiers/: CMakeLists.txt  package.xml
mbot_nlu_classifiers/common/setup/: download_classifiers.sh
mbot_nlu_filter/: CMakeLists.txt  package.xml  setup.py
mbot_nlu_filter/ros/launch/: filter.launch  filter_with_nlu.launch
mbot_nlu_filter/ros/scripts/: mbot_nlu_filter_node
mbot_nlu_filter/ros/src/mbot_nlu_filter_ros/: mbot_nlu_filter.py
mbot_nlu_training/: CMakeLists.txt  README.md  package.xml
mbot_nlu_training/common/resources/wikipedia_vectors/: .gitignore  most_common_words.txt  pedro_dictionary
mbot_nlu_training/common/scripts/: process_raw.py  sample.txt
mbot_nlu_training/common/setup/: gen_wikipedia_vectors.sh  nlu_training_setup.sh
mbot_nlu_training/common/src/mbot_nlu_training/: .gitignore
mbot_nlu_training/common/src/mbot_nlu_training/eegpsr/intention_NN/: eegpsr_data_generator.py  train_nn_model.py
mbot_nlu_training/common/src/mbot_nlu_training/eegpsr/slots_NN/: eegpsr_data_generator.py  train_nn_model.py
mbot_nlu_training/common/src/mbot_nlu_training/erl/intention_NN/: README.md  erl_data_generator.py  train_nn_model.py
mbot_nlu_training/common/src/mbot_nlu_training/erl/slots_NN/bringing/: erl_data_generator.py  train_nn_model.py
mbot_nlu_training/common/src/mbot_nlu_training/erl/slots_NN/motion/: erl_data_generator.py  train_nn_model.py
mbot_nlu_training/common/src/mbot_nlu_training/erl/slots_NN/placing/: erl_data_generator.py  train_nn_model.py
mbot_nlu_training/common/src/mbot_nlu_training/erl/slots_NN/searching/: erl_data_generator.py  train_nn_model.py
mbot_nlu_training/common/src/mbot_nlu_training/erl/slots_NN/taking/: erl_data_generator.py  (+1 more)
mbot_nlu_training/common/src/mbot_nlu_training/gen_wikipedia_vectors/: .gitignore  README.md  glove_to_dic.py  list_to_vec.py
mbot_nlu_training/common/src/mbot_nlu_training/gpsr/intention_NN/: gpsr_data_generator.py  train_nn_model.py
mbot_nlu_training/common/src/mbot_nlu_training/gpsr/slots_NN/: .gitignore  gpsr_data_generator.py  train_nn_model.py
mbot_nlu_training/ros/config/: config_mbot_nlu_training.yaml
